deleted h2 enjoy the game and fixed margin on mobile phone

--- a/src/style.scss
+++ b/src/style.scss
@@ -83,12 +83,18 @@ body {
     font-size: 3.5rem;
     padding: 10px 14px;
   }
-
-  .status h2 {
-    font-size: 1.2rem;
-    text-align: center;
+  h1,
+  h2 {
+    margin: 0.5rem;
   }
 
+  h2 {
+    visibility: hidden;
+  }
+
+  h2:first-child {
+    visibility: visible;
+  }
   .game-over {
     font-size: 1.5rem;
     padding: 15px 25px;
